<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.open.schedule.CreateTableActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textTableName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_new_table_name" />

    <EditText
        android:id="@+id/editTableName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textTableName"
        android:layout_below="@+id/textTableName"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/hint_new_table_name" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textTableDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTableName"
        android:layout_below="@+id/editTableName"
        android:layout_marginTop="26dp"
        android:text="@string/text_new_table_description" />

    <EditText
        android:id="@+id/editTableDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textTableDescription"
        android:layout_below="@+id/textTableDescription"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/new_table_description"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btCreateTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="34dp"
        android:text="@string/button_new_table_create" />

</RelativeLayout>
