<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.open.schedule.CreateTaskActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/edit_task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_task_name"
        android:layout_alignBottom="@+id/text_task_name"
        android:layout_alignParentRight="true"
        android:ems="10" />

    <TextView
        android:id="@+id/text_task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/text_task_description"
        android:layout_marginTop="32dp"
        android:text="@string/text_task_name" />

    <TextView
        android:id="@+id/text_task_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_task_name"
        android:layout_marginTop="27dp"
        android:layout_toLeftOf="@+id/edit_task_description"
        android:text="@string/text_task_description" />

    <EditText
        android:id="@+id/edit_task_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_task_description"
        android:layout_alignBottom="@+id/text_task_description"
        android:layout_alignLeft="@+id/edit_task_name"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/text_task_dates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_task_description"
        android:layout_below="@+id/edit_task_description"
        android:layout_marginTop="45dp"
        android:text="@string/text_task_dates" />

    <TextView
        android:id="@+id/text_task_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_task_dates"
        android:layout_centerVertical="true"
        android:text="@string/text_task_time" />

    <TextView
        android:id="@+id/text_task_time_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/text_task_date_start"
        android:layout_below="@+id/text_task_times"
        android:text="Start..." />

    <TextView
        android:id="@+id/text_task_time_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_task_time_start"
        android:layout_alignLeft="@+id/text_task_date_end"
        android:text="End..." />

    <TextView
        android:id="@+id/text_task_date_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_task_description"
        android:layout_below="@+id/text_task_dates"
        android:text="Start..." />

    <TextView
        android:id="@+id/text_task_date_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_task_date_start"
        android:layout_alignBottom="@+id/text_task_date_start"
        android:layout_marginLeft="54dp"
        android:layout_toRightOf="@+id/text_task_date_start"
        android:text="End..." />

    <Button
        android:id="@+id/btCreateTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_task_time_end"
        android:layout_marginTop="44dp"
        android:layout_toRightOf="@+id/text_task_time_end"
        android:text="@string/button_create_task" />

</RelativeLayout>